--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
   fl_chart: ^0.71.0
+  http: ^1.1.0
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
